2008-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-kantei-x-face-alist): Update.

2008-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-get-headers-for-today): Fix regexp.

2008-09-26  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-rss.el (luna-define-class): Add a new slot `ignored-subject'.
	Define internal accessor.
	(initialize-instance): Initialize `ignored-subject'.
	(shimbun-rss-get-headers): Chech if a subject matches with
	`ignored-subject'.

	* sb-impress.el (shimbun-impress-groups-alist): Use rss for
	forest group.
	(shimbun-impress-ignored-subject): Rename from
	shimbun-impress-ignored-subject-regexp.
	(shimbun-headers): Don't check ignored-subject here.

	* sb-itmedia.el (shimbun-itmedia-ignored-subject): New variable.

2008-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el: Support Aso Cabinet E-mail Magazine.

2008-09-20  David Engster  <dengste@eml.cc>

	* sb-perlentaucher-de.el (shimbun-perlentaucher-de-url-regexp): Adapt
	to new URL scheme in RSS feed.

	* sb-slashdot.el: Require sb-multi and use it.
	(shimbun-slashdot-content-end, shimbun-slashdot-content-start): Remove.
	(shimbun-slashdot-get-comments, shimbun-slashdot-comment-threshold)
	(shimbun-slashdot-comment-display): New variables.
	(shimbun-slashdot-regexp-author-time): Relax regexp.
	(shimbun-slashdot-regexp-comment-system): New variable.
	(shimbun-slashdot-get-headers): Replace HTML tags in subject.
	(shimbun-multi-next-url, shimbun-clear-contents): New overriden
	methods.

2008-09-15  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-yahoo-auctions.el (shimbun-yahoo-auctions-content-start)
	(shimbun-yahoo-auctions-content-end): Follow the change of the site
	design.
	(shimbun-make-contents): Remove.

2008-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-ohmynews-jp.el: Remove.

2008-09-03  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-itmedia.el (shimbun-itmedia-content-start): New variable.